Code Cleanup
Former-commit-id: 608599f2b967759ff445386504edab63ab91c730
Former-commit-id: c6b12f0780a441a794a97ea8f3146858e0ee1355